package com.github.egnbjork.hotelroomallocation.domain.model;

public enum RoomType {
    PREMIUM,
    ECONOMY
}
