classDiagram
direction TB

    class RoomsAllocationController {
        +allocateRooms(RoomsAllocationRequest request): RoomsAllocationResponse
    }

    class RoomsAllocationRequest {
        <<record>>
        +int premiumRooms
        +int economyRooms
        +List<BigDecimal> potentialGuests
    }

    class RoomsAllocationResponse {
        <<record>>
        +int usagePremium
        +BigDecimal revenuePremium
        +int usageEconomy
        +BigDecimal revenueEconomy
    }

    class RoomsAllocationService {
        +allocateRooms(RoomsAllocationRequest request): RoomsAllocationResponse
    }

    class RoomsAllocatorFacade {
        +allocateRooms(List<AvailableRooms> availableRooms, List<Guest> guests): RoomsAllocationResult
    }

    class RoomsAllocationDataMapper {
        +toGuests(List<BigDecimal> guestList): List<Guest>
        +toAvailableRooms(RoomsAllocationRequest request): Map<RoomType, Integer>
        +toResponse(RoomsAllocationResult result): RoomsAllocationResponse
    }

    class Guest {
	    +BigDecimal offerPrice
        +isPremium(): boolean
    }

    class AllocateRooms {
        <<port>>
        +handle(List<AvailableRooms> availableRooms, List<Guest> guests): RoomsAllocationResult
    }

    class RoomsAllocator {
        +handle(List<AvailableRooms> availableRooms, List<Guest> guests): RoomsAllocationResult
    }

    class AvailableRooms {
        + RoomType roomType,
        + int availableCount
    }

    class RoomsAllocationResult {
        <<record>>
        +Set<RoomsAllocationMetrics> allocationMetrics
        +getRoomMetricsForType(RoomType roomType): Optional<RoomsAllocationMetrics>
    }

    class RoomsAllocationMetrics {
        <<record>>
        +RoomType type
        +int usageCount
        +BigDecimal revenue
    }


    class RoomType {
        <<enum>>
        PREMIUM
        ECONOMY
    }

    RoomsAllocationController --> RoomsAllocationRequest
    RoomsAllocationController --> RoomsAllocationResponse
    RoomsAllocationController --> RoomsAllocationService
    RoomsAllocationService --> RoomsAllocationDataMapper :uses
    RoomsAllocationDataMapper --> Guest :maps to
    RoomsAllocationDataMapper --> AvailableRooms :maps to
    RoomsAllocationService --> RoomsAllocatorFacade
    RoomsAllocatorFacade --> AllocateRooms :delegates to
    AllocateRooms <|.. RoomsAllocator : implements
    RoomsAllocator --> RoomsAllocationResult
    RoomsAllocationResult --> RoomsAllocationMetrics
    RoomsAllocationMetrics --> RoomType
    RoomsAllocator --> Guest
    AvailableRooms --> RoomType
    RoomsAllocator --> AvailableRooms
